[gd_scene load_steps=36 format=3 uid="uid://cjd2gwr12xu68"]

[ext_resource type="Script" path="res://scripts/combat.gd" id="1_gxtrx"]
[ext_resource type="Resource" uid="uid://cawcssv2ptlv3" path="res://enemyRes/Slime.tres" id="2_kgu4v"]
[ext_resource type="Texture2D" uid="uid://bx08cxphtmw8m" path="res://art/battleback10.png" id="3_gytai"]
[ext_resource type="FontFile" uid="uid://chxubfkg3ng3l" path="res://art/fonts/Nes.tres" id="4_fw2ga"]
[ext_resource type="Texture2D" uid="uid://d1ytmvkefv3h3" path="res://slime.tres" id="5_6uf8k"]
[ext_resource type="Texture2D" uid="uid://ccsururxv3j4w" path="res://art/player_combat.tres" id="6_mj2pb"]
[ext_resource type="Texture2D" uid="uid://dimdywpxrxve4" path="res://art/characters/slime/sprite_00.png" id="7_6md2j"]
[ext_resource type="Texture2D" uid="uid://mhsy0dnocgei" path="res://art/characters/slime/sprite_17.png" id="8_7akr6"]
[ext_resource type="Texture2D" uid="uid://c57uffewocmgr" path="res://art/characters/slime/sprite_18.png" id="9_va27u"]
[ext_resource type="Texture2D" uid="uid://bpm6x6buxjntw" path="res://art/characters/slime/sprite_19.png" id="10_nmc2o"]
[ext_resource type="Texture2D" uid="uid://mfehsl8y2fek" path="res://art/characters/slime/sprite_20.png" id="11_fe0yg"]
[ext_resource type="Texture2D" uid="uid://bt5od7avw55py" path="res://art/characters/slime/sprite_21.png" id="12_8nkrr"]
[ext_resource type="Texture2D" uid="uid://bwfap2s04rlfs" path="res://art/characters/slime/sprite_22.png" id="13_0rn6r"]
[ext_resource type="Texture2D" uid="uid://bnv26imjc4rri" path="res://art/characters/slime/sprite_23.png" id="14_dot30"]
[ext_resource type="Texture2D" uid="uid://c6cwqmqka8uen" path="res://art/characters/slime/sprite_24.png" id="15_y5s3j"]
[ext_resource type="Texture2D" uid="uid://d338i08kpnn2v" path="res://art/characters/player/sprite_40.png" id="16_7rbns"]
[ext_resource type="Texture2D" uid="uid://deafttatljs05" path="res://art/characters/player/sprite_41.png" id="17_l1k1y"]
[ext_resource type="Texture2D" uid="uid://dnllgwdq0388a" path="res://art/characters/player/sprite_42.png" id="18_sredy"]
[ext_resource type="Texture2D" uid="uid://c0dhl3lo8ahb" path="res://art/characters/player/sprite_43.png" id="19_s24yv"]
[ext_resource type="Texture2D" uid="uid://dbvdyg7hoqd" path="res://art/characters/player/sprite_48.png" id="20_p0ufl"]
[ext_resource type="Texture2D" uid="uid://dvm1ij5onarie" path="res://art/characters/player/sprite_49.png" id="21_fgbe6"]
[ext_resource type="Texture2D" uid="uid://dj83b2qysd81g" path="res://art/characters/player/sprite_50.png" id="22_34q8w"]
[ext_resource type="AudioStream" uid="uid://djmkb82enflgo" path="res://audio/hitHurt.wav" id="23_5j46x"]
[ext_resource type="AudioStream" uid="uid://q4pl4gi37r" path="res://audio/battle-intro-126837.mp3" id="24_gfm0v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5eus"]
bg_color = Color(0.619608, 0.0784314, 0.101961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kplqp"]
bg_color = Color(0.0431373, 0.360784, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg1ew"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.913725)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.890196, 0.890196, 0.890196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y445"]
bg_color = Color(0.054902, 0.054902, 0.054902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Animation" id="Animation_isq23"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerContainer/TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyContainer/Enemy:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6uf8k")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerContainer/TextureRect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_mj2pb")]
}

[sub_resource type="Animation" id="Animation_vlvxp"]
resource_name = "ememy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_do2t3"]
resource_name = "enemy_death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyContainer/Enemy:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.2001, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_6md2j"), ExtResource("8_7akr6"), ExtResource("7_6md2j"), ExtResource("9_va27u"), ExtResource("10_nmc2o"), ExtResource("11_fe0yg"), ExtResource("12_8nkrr"), ExtResource("13_0rn6r"), ExtResource("14_dot30"), ExtResource("15_y5s3j")]
}

[sub_resource type="Animation" id="Animation_5c6c6"]
resource_name = "player_attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerContainer/TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("16_7rbns"), ExtResource("17_l1k1y"), ExtResource("18_sredy"), ExtResource("19_s24yv")]
}

[sub_resource type="Animation" id="Animation_xliw7"]
resource_name = "player_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerContainer/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_suybd"]
resource_name = "player_death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerContainer/TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("6_mj2pb"), ExtResource("20_p0ufl"), ExtResource("21_fgbe6"), ExtResource("22_34q8w")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4x4in"]
_data = {
"RESET": SubResource("Animation_isq23"),
"ememy_damaged": SubResource("Animation_vlvxp"),
"enemy_death": SubResource("Animation_do2t3"),
"player_attack": SubResource("Animation_5c6c6"),
"player_damaged": SubResource("Animation_xliw7"),
"player_death": SubResource("Animation_suybd")
}

[node name="combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxtrx")
world_name = "combat"
enemy = ExtResource("2_kgu4v")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0123457
anchor_right = 1.00347
anchor_bottom = 0.989194
texture = ExtResource("3_gytai")
metadata/_edit_use_anchors_ = true

[node name="EnemyContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.596354
anchor_top = 0.220679
anchor_right = 0.801215
anchor_bottom = 0.546296
offset_top = 102.0
offset_right = 2.0
offset_bottom = 102.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_p5eus")
theme_override_styles/fill = SubResource("StyleBoxFlat_kplqp")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 25
text = "Hp: 50/100
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
texture = ExtResource("5_6uf8k")
flip_h = true

[node name="PlayerContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152778
anchor_top = 0.348765
anchor_right = 0.359375
anchor_bottom = 0.671296
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="PlayerContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_p5eus")
theme_override_styles/fill = SubResource("StyleBoxFlat_kplqp")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 25
text = "Hp: 50/100
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PlayerContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
texture = ExtResource("6_mj2pb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.215278
anchor_top = 0.679012
anchor_right = 0.819444
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_jg1ew")
metadata/_edit_use_anchors_ = true

[node name="ActionMenu" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0133333
anchor_top = 0.0246306
anchor_right = 0.271667
anchor_bottom = 0.99015
offset_right = -163.0
size_flags_horizontal = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Attack" type="Button" parent="Panel/ActionMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_colors/icon_pressed_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_colors/icon_hover_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 50
text = "Attack"

[node name="Block" type="Button" parent="Panel/ActionMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_colors/icon_pressed_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_colors/icon_hover_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "guard 
"

[node name="Items" type="Button" parent="Panel/ActionMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_colors/icon_pressed_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_colors/icon_hover_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "Items
"

[node name="Run" type="Button" parent="Panel/ActionMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0.894118, 0.894118, 1)
theme_override_colors/icon_pressed_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_colors/icon_hover_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
theme_override_colors/icon_focus_color = Color(0.254902, 0.254902, 0.254902, 1)
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 50
text = "Run
"

[node name="Action_text" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4y445")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel/Action_text"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("4_fw2ga")
theme_override_font_sizes/font_size = 30
text = "
A slime apperes!"
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4x4in")
}

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_5j46x")
volume_db = -18.0

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_gfm0v")
volume_db = -19.665

[connection signal="pressed" from="Panel/ActionMenu/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Panel/ActionMenu/Block" to="." method="_on_block_pressed"]
[connection signal="pressed" from="Panel/ActionMenu/Run" to="." method="_on_run_pressed"]
